--- a/dada/templates/extensions/multiple_subscribe/default.tmpl
+++ b/dada/templates/extensions/multiple_subscribe/default.tmpl
@@ -27,19 +27,19 @@
     
    <!-- tmpl_if show_archives -->
         
-        <!-- tmpl_if newest_archive_blurb -->
+        <!-- tmpl_if latest_archive_blurb -->
             
             <blockquote>
              <p>
               <strong>
                <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var uri_escaped_list -->/newest/">
-                Last Message: <!-- tmpl_var newest_archive_subject -->
+                Last Message: <!-- tmpl_var latest_archive_subject -->
                </a>
               </strong>
              </p>
              <p>
               <em>
-               <!-- tmpl_var newest_archive_blurb -->...
+               <!-- tmpl_var latest_archive_blurb -->...
               </em>
              </p>
              <p class="text-right">
