--- a/dada/templates/feature_set_screen.tmpl
+++ b/dada/templates/feature_set_screen.tmpl
@@ -73,7 +73,7 @@
 	</div>
 </div>
 
-<label>List Control Panel Menu Style:</label> 
+<h4>List Control Panel Menu Style</h4> 
 
 <div class="row">
 	<div class="small-12 columns">
