--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -61,12 +61,13 @@
 </div> 
 
 
-<div class="row">
-   <div class="small-12 columns" id="footer">
-		<p><small><!-- tmpl_var footer_props --></small></p>   
+<!-- tmpl_if footer_props -->
+	<div class="row">
+	   <div class="small-12 columns" id="dadamail_footer">
+			<p><small><!-- tmpl_var footer_props --></small></p>   
+		</div>
 	</div>
-</div>
-
+<!-- /tmpl_if -->
 
 
 
