--- a/dada/templates/newsfeed_widget.tmpl
+++ b/dada/templates/newsfeed_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin newsfeed_widget.tmpl --> 
 <!-- tmpl_if list_settings.publish_archives_rss --> 
-	<div class="row">
+	<div class="row" style="margin:5px">
 		<div class="small-12 columns">
 			<div class="clearfix">					
 				<a href="<!-- tmpl_var PROGRAM_URL -->/archive_rss/<!-- tmpl_var list_settings.list -->/" class="right">
