--- a/dada/static/css/dada_mail.css
+++ b/dada/static/css/dada_mail.css
@@ -72,7 +72,7 @@ iframe#archived_message_body_container {
 .floating_panel .button {
 	margin-bottom:0;
 }
-#footer {
+#dadamail_footer {
 	margin-top: 30px;
 	padding:10px;
 	/* box-shadow: 0px 0px 4px 3px rgba( 51, 0, 0, .3 ); */
