--- a/dada/templates/list_template_body_code_block.tmpl
+++ b/dada/templates/list_template_body_code_block.tmpl
@@ -33,17 +33,13 @@
 	<!-- /tmpl_if --> 
 <!-- /tmpl_if -->
 
-
-
-<div class="row">
-   <div class="small-12 columns" id="footer">
-		<p><!-- tmpl_var footer_props --></p>   
+<!-- tmpl_if footer_props -->
+	<div class="row">
+	   <div class="small-12 columns" id="dadamail_footer">
+			<p><small><!-- tmpl_var footer_props --></small></p>   
+		</div>
 	</div>
-</div>
-
-
-
-
+<!-- /tmpl_if -->
 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.topbar.js"></script>
