--- a/dada/templates/default_screen.tmpl
+++ b/dada/templates/default_screen.tmpl
@@ -45,12 +45,10 @@
 						</em>
 					</p>
 					<blockquote>
-						<!-- tmpl_var latest_archive_blurb -->...
-						<p class="text-right">
+						<!-- tmpl_var latest_archive_blurb --> 
 							<a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list -->/<!--tmpl_var latest_archive_id -->/">
-								Continue Reading...
+								...Continue Reading
 							</a>
-						</p>
 					</blockquote>
 				<!-- /tmpl_if --> 
 			<!-- /tmpl_unless-->
