--- a/dada/templates/archive_list_widget.tmpl
+++ b/dada/templates/archive_list_widget.tmpl
@@ -32,7 +32,10 @@
 			<!-- /tmpl_if -->	
 				<!-- tmpl_if message_blurb -->
 					<blockquote>
-						<!-- tmpl_var message_blurb -->...
+						<!-- tmpl_var message_blurb --> 
+						<a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var uri_escaped_list -->/<!-- tmpl_var id -->/">
+							...Continue Reading
+						</a>
 					</blockquote>
 				<!--/tmpl_if-->
 			</div> 
