--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -586,7 +586,7 @@
 						value="1" 
 						<!--tmpl_if list_settings.mail_discussion_message_to_poster -->checked="checked"<!--/tmpl_if-->
 					>
-						Send message posters a copy of the message they've sent the discussion list. 
+						Send message posters a copy of the message they've sent to the discussion list. 
 					</label>
 				</div> 
 			</div>
@@ -605,6 +605,7 @@
 					</label>
 					<div class="alert-box warning radius">
 						Parsing Template Tags could create formatting problems. 
+						It's suggested you keep this option <strong>checked</strong>.  
 					</div> 
 				</div> 
 			</div>
@@ -642,9 +643,9 @@
 	
 			<div class="row">
 				<div class="small-12 columns">	
-					<label>
+					<h4>
 						Replies to messages should:
-					</label>
+					</h4>
 				</div> 
 			</div>
 
