--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -571,7 +571,9 @@
 		    		<input type="hidden" name="plugin" value="tracker" > 
 		    		<input type="hidden" name="prm" value="download_activity_logs" > 
 		    		<input type="hidden" name="mid" value="<!-- tmpl_var mid -->" >
-		    		 <input type="submit" class="success button" name="process" value="Download Raw Activity Logs (.csv)" >
+		    		 <button type="submit" class="success button" name="process">
+						 <i class="fi-page-export-csv"></i> Download Raw Activity Logs (.csv)
+					</button>
 				</form> 
 			</li>
 			<li>
@@ -581,7 +583,12 @@
 
 				<input type="hidden" name="prm" value="download_clickthrough_logs" > 
 				<input type="hidden" name="mid" value="<!-- tmpl_var mid -->" >
-				 <input type="submit" class="success button" name="process" value="Download Raw Clickthrough Logs (.csv)" >
+				 <button 
+				 	type="submit" 
+					class="success button" 
+					name="process">
+						<i class="fi-page-export-csv"></i> Download Raw Clickthrough Logs (.csv)
+					</button>
 				</form> 
 			</li>
 		</ul>
