--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -782,7 +782,7 @@ $ADMIN_MENU = [
 
 
 		{
-		-Title      => 'Control Panel Settings',
+		-Title      => '<i class="fi-widget"></i> Control Panel Settings',
 		-Activated  => 0,
 		-Submenu    => [
 					{
