Something Something about how much encoding is difficult

--- a/dada/templates/list_archive_screen.tmpl
+++ b/dada/templates/list_archive_screen.tmpl
@@ -37,7 +37,7 @@
 						<strong>
 							From:
 						</strong>
-						<!-- tmpl_var header_from escape="HTML" -->
+						<!-- tmpl_var header_from -->
 					</div>
 				</div>
 			<!-- /tmpl_if -->
