--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -50,108 +50,112 @@
 			</li>
 		</ul>
 	</div>
+<div style="width:100%"> 
+    <div style="height: 480px; overflow: auto; width:100%">
 
-<table  style="width:100%" class="responsive">
-<tr> 
-<th> 
-	Sent
-</th>			
-<th> 
-	Subject
-</th> 
-<th> 
-	Archive
-</th>
-<th> 
-	Subscribers
-</th>
-<th> 
-	Recipients
-</th>
-<th> 
-	Opens
-</th>
-<th> 
-	Clickthroughs
-</th>
-<th> 
-	Unsubscribes
-</th>
-<th> 
-	Bounces (soft/hard)
-</th>
-<th> 
-</th>
-</tr> 
-<!-- tmpl_loop report_by_message_index --> 
-<tr> 
-	<td> 
-		<!-- tmpl_var date --> 
-	</td>
+		<table  style="width:100%" class="responsive">
+		<tr> 
+		<th> 
+			Sent
+		</th>			
+		<th> 
+			Subject
+		</th> 
+		<th> 
+			Archive
+		</th>
+		<th> 
+			Subscribers
+		</th>
+		<th> 
+			Recipients
+		</th>
+		<th> 
+			Opens
+		</th>
+		<th> 
+			Clickthroughs
+		</th>
+		<th> 
+			Unsubscribes
+		</th>
+		<th> 
+			Bounces (soft/hard)
+		</th>
+		<th> 
+		</th>
+		</tr> 
+		<!-- tmpl_loop report_by_message_index --> 
+		<tr> 
+			<td> 
+				<!-- tmpl_var date --> 
+			</td>
 
- <td> 
-	<!-- tmpl_if message_subject -->
-		<a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-			<!-- tmpl_var message_subject escape="HTML" -->
-		</a> 
-	<!-- tmpl_else --> 
-		<a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-			#<!-- tmpl_var mid --> (unarchived message)
-		</a>
-	<!-- /tmpl_if --> 
-	</td> 
-<td>
+		 <td> 
+			<!-- tmpl_if message_subject -->
+				<a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+					<!-- tmpl_var message_subject escape="HTML" -->
+				</a> 
+			<!-- tmpl_else --> 
+				<a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+					#<!-- tmpl_var mid --> (unarchived message)
+				</a>
+			<!-- /tmpl_if --> 
+			</td> 
+		<td>
 	
-<!-- tmpl_if message_subject -->
-	<a href="<!-- tmpl_var S_PROGRAM_URL -->?prm=view_archive&list=<!-- tmpl_var list -->&id=<!-- tmpl_var mid -->" target="_blank">
-		View 
-	</a> 
-	<!-- tmpl_else --> 
-<!-- /tmpl_if --> 
- <td> 
-   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-    <!-- tmpl_var num_subscribers  default="-"--> 
-   </a> 
- </td> 			
- <td> 
-   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-    <!-- tmpl_var total_recipients  default="-"--> 
-   </a> 
- </td>
- <td> 
-   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-    <!-- tmpl_var open default="-"  --> 
-   </a> 
- </td>
- <td> 
-   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-    <!-- tmpl_var count  default="-"  --> 
-   </a> 
- </td>
- <td> 
-   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
-    <!-- tmpl_var unsubscribe  default="-"  --> 
-   </a> 
- </td>
- <td> 
-   <a href="<!-- tmpl_var Plugin_URL -->?prm=m&mid=<!-- tmpl_var mid -->">
-    <!-- tmpl_var soft_bounce  default="-" --> /<!-- tmpl_var hard_bounce default="-" --> 
-   </a> 
- </td> 
- <td>
-     <form action="<!-- tmpl_var S_PROGRAM_URL -->">
-		<button 
-			type="button" 
-			name=""
-			class="button small alert tracker_delete_msg_id_data" 
-			data-mid="<!-- tmpl_var mid -->" 
-		>  	<i class="fi-x"></i>
-	</button>	
-	</form> 
-</td>
-</tr> 
-<!-- /tmpl_loop --> 
-</table> 
+		<!-- tmpl_if message_subject -->
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?prm=view_archive&list=<!-- tmpl_var list -->&id=<!-- tmpl_var mid -->" target="_blank">
+				View 
+			</a> 
+			<!-- tmpl_else --> 
+		<!-- /tmpl_if --> 
+		 <td> 
+		   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+		    <!-- tmpl_var num_subscribers  default="-"--> 
+		   </a> 
+		 </td> 			
+		 <td> 
+		   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+		    <!-- tmpl_var total_recipients  default="-"--> 
+		   </a> 
+		 </td>
+		 <td> 
+		   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+		    <!-- tmpl_var open default="-"  --> 
+		   </a> 
+		 </td>
+		 <td> 
+		   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+		    <!-- tmpl_var count  default="-"  --> 
+		   </a> 
+		 </td>
+		 <td> 
+		   <a href="<!-- tmpl_var Plugin_URL" -->?prm=m&mid=<!-- tmpl_var mid -->">
+		    <!-- tmpl_var unsubscribe  default="-"  --> 
+		   </a> 
+		 </td>
+		 <td> 
+		   <a href="<!-- tmpl_var Plugin_URL -->?prm=m&mid=<!-- tmpl_var mid -->">
+		    <!-- tmpl_var soft_bounce  default="-" --> /<!-- tmpl_var hard_bounce default="-" --> 
+		   </a> 
+		 </td> 
+		 <td>
+		     <form action="<!-- tmpl_var S_PROGRAM_URL -->">
+				<button 
+					type="button" 
+					name=""
+					class="button small alert tracker_delete_msg_id_data" 
+					data-mid="<!-- tmpl_var mid -->" 
+				>  	<i class="fi-x"></i>
+			</button>	
+			</form> 
+		</td>
+		</tr> 
+		<!-- /tmpl_loop --> 
+		</table> 
+	</div>
+</div>
 
 <!-- tmpl_if comment --> 	
 	<fieldset> 
