--- a/dada/templates/transform_to_pro.tmpl
+++ b/dada/templates/transform_to_pro.tmpl
@@ -15,7 +15,7 @@
 		supports, as well as the number of subscribers you may have per mailing lists. 
 		And those nagging links/buttons back to your site? Those go as well. 
 		Pro Dada is something you subscribe to (monthly, yearly), but if you decide
-		not to renew your subscription, you current copy of Pro Dada will still work as Pro Dada. Hurray!
+		not to renew your subscription, your running install of Pro Dada will keep being Pro Dada. Hurray!
 	</p> 
 	
 	<p>
@@ -39,7 +39,7 @@
 <h1>
 	Already Purchased Pro Dada?
 </h1>
-<p> Enter your Pro Dada username and password, 
+<p> Awesome! Please enter your Pro Dada username and password, 
 	and we'll start the upgrade process:
 </p>
 <form>
