--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -110,11 +110,11 @@
 					<ul class="left">
 							<li  class="has-form">
 								<a 
-									href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=upgrade_to_pro" 
+									href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=transform_to_pro" 
 									class="button round alert" 
 									style="font-weight:bold; box-shadow: 0px -2px 14px 0px  rgba(255, 102, 204, 1);"
 								>
-									Upgrade now to Pro Dada!
+									Transform This Install Into Pro Dada!
 								</a>
 							</li>
 						</ul>
