--- a/dada/templates/transform_to_pro.tmpl
+++ b/dada/templates/transform_to_pro.tmpl
@@ -1,18 +1,18 @@
-<!-- begin upgrade_to_pro.tmpl -->
+<!-- begin transform_to_pro.tmpl -->
 
-<div id="upgrade_to_pro"></div>
+<div id="transform_to_pro"></div>
 
-<h1>Pro Dada makes Dada Mail Awesome</h1>
+<h1>Pro Dada makes Dada Mail <em>Awesome</em></h1>
 
 	<p>
-		Pro Dada entitles you to prioritized, direct support for this installation of our
+		A Pro Dada Subscription entitles you to prioritized, direct support for your installation of this
 		super cool software. We'll also be giving you access to the Pro Dada Manual, which covers 
-		how to use our software effectively. 
+		how to use this software most effectively. 
 	</p>
 	
 	<p>
 		We'll also be removing the quotas for the number of mailing lists this installation 
-		supports, as well as the number of subscribers you may have per mailing lists. 
+		supports, as well as the number of subscribers you may have per mailing list. 
 		And those nagging links/buttons back to your site? Those go as well. 
 		Pro Dada is something you subscribe to (monthly, yearly), but if you decide
 		not to renew your subscription, your running install of Pro Dada will keep being Pro Dada. Hurray!
@@ -24,7 +24,7 @@
 		>
 			Click the button below
 		</a>
-		to purchase Pro Dada, or to just learn more about what makes Pro Dada so awesome for your business. 
+		to purchase Pro Dada, or to simply learn more about what makes a Pro Dada Subscription so awesome for your business. 
 		
 </p>
 
@@ -33,14 +33,14 @@
 	class="large button expand"
 	target="_blank"
 >
-	Purchase Pro Dada
+	Purchase a Pro Dada Subscription...
 </a>
 
 <h1>
-	Already Purchased Pro Dada?
+	Already a Pro Dada Subscriber?
 </h1>
-<p> Awesome! Please enter your Pro Dada username and password, 
-	and we'll start the upgrade process:
+<p> Most Excellent! Please enter your Pro Dada username and password below, 
+	and we'll start the transformation process:
 </p>
 <form>
 	
@@ -82,7 +82,7 @@
 			<form>
 				<input type="hidden" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->">
 			<button type="button" class="success expand verify_pro_dada">
-				Verify...
+				Verify Your Pro Dada Subscription...
 			</button>
 			</form>
 		</div>
@@ -91,4 +91,4 @@
 </form>
 
 
-<!-- end upgrade_to_pro.tmpl -->
+<!-- end transform_to_pro.tmpl -->
