--- a/dada/templates/transform_to_pro_failure.tmpl
+++ b/dada/templates/transform_to_pro_failure.tmpl
@@ -4,4 +4,4 @@
 check that your Pro Dada username and password are correct and try again.</p>
 
 
-<!-- tmpl_include upgrade_to_pro.tmpl -->
+<!-- tmpl_include transform_to_pro.tmpl -->
