--- a/dada/templates/transform_to_pro_success.tmpl
+++ b/dada/templates/transform_to_pro_success.tmpl
@@ -1,10 +1,13 @@
-<!-- begin upgrade_to_pro_success.tmpl -->
-	<h1>Christmas has come early!</h1>
+<!-- begin transform_to_pro_success.tmpl -->
+	<h1>Pro Dada Transformation Complete!</h1>
+	<p>
+		 Your now running Pro Dada! 
+	</p>
 	
 	<p>
-		This install is now Pro Dada! 
+		We appreciate you being a Pro Dada Subcriber.
 	</p>
-	<p>
-		Happy Pro Dada Mailing!
-	</p>
-<!-- end upgrade_to_pro_success.tmpl -->
+	<!-- tmpl_if comment -->
+		<p>Receipt: <code><!-- tmpl_var receipt --></code></p>
+	<!-- /tmpl_if -->
+<!-- end transform_to_pro_success.tmpl -->
