Wrong things made right!

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -85,7 +85,7 @@
 				</section>
 				<section class="middle tab-bar-section">
 					<a href="<!-- tmpl_var PROGRAM_URL -->">
-						<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->">
+						<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/<!-- tmpl_var PROGRAM_IMG_FILENAME default="dada_mail_logo.png" -->" alt="<!-- tmpl_var PROGRAM_NAME -->">
 					</a>             
 				</section>
 			</nav>
