--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -18,7 +18,7 @@
         <ul class="title-area">
            <li class="name">
 				<a href="<!-- tmpl_var PROGRAM_URL -->">
-					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" >
+					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/<!-- tmpl_var PROGRAM_IMG_FILENAME -->" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" >
 				</a>
            </li>
 	     <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
