--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -148,7 +148,7 @@
 	 If you find Dada Mail incredibly useful, please support
 	 <a href="http://dadamailproject.com/purchase/pro.html" target="_blank">The Dada Mail Project.</a></p> 
 
-	<!-- tmpl_include transform_to_pro_dada.tmpl -->
+	<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
 
 	<p>I really appreciate all the support received! Thanks!</p> 
 
