--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -64,7 +64,7 @@
 		
 		<!-- tmpl_if comment -->
 			<!-- tmpl_if expr="(num_subscribers >= SUBSCRIPTION_QUOTA)" --> 
-				<!-- tmpl_include transform_to_pro_dada.tmpl -->
+				<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
 			<!-- /tmpl_if --> 
 		<!-- /tmpl_if --> 
 
