--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -161,7 +161,7 @@
 
 <!-- tmpl_if comment -->
 	<!-- tmpl_if expr="list_max_reached == 1" -->
-		<!-- tmpl_include transform_to_pro_dada.tmpl -->
+		<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
 	<!-- /tmpl_if -->
 <!-- /tmpl_if -->
 
