--- a/dada/templates/upgrade_to_pro_dada.tmpl
+++ b/dada/templates/upgrade_to_pro_dada.tmpl
@@ -1,3 +1,3 @@
-<!-- begin transform_to_pro_dada.tmpl -->
+<!-- begin upgrade_to_pro_dada.tmpl -->
 	you should upgrade to Pro Dada.
-<!-- end transform_to_pro_dada.tmpl -->
+<!-- end upgrade_to_pro_dada.tmpl -->
