--- a/dada/templates/transform_to_pro_success.tmpl
+++ b/dada/templates/transform_to_pro_success.tmpl
@@ -1,7 +1,7 @@
 <!-- begin transform_to_pro_success.tmpl -->
 	<h1>Pro Dada Transformation Complete!</h1>
 	<p>
-		 Your now running Pro Dada! 
+		 You are now running Pro Dada! 
 	</p>
 	
 	<p>
